tests/macro-tests/cases/ui_node/attr_in_item_not_impl.stderr
error: expected `impl`
 --> $DIR/attr_in_item_not_impl.rs:4:1
  |
4 | struct Foo {}
  | ^^^^^^
